Needed to remove space and added js

--- a/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/index.html
+++ b/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/index.html
@@ -137,7 +137,7 @@
                 <!-- Artist 1 -->
                 <div class="col-lg-4 col-md-6">
                     <div class="artist-card card">
-                        <img src="Pictures/Emma Rodriguez.jpg" alt="Artist Elena Rodriguez" class="card-img-top">
+                        <img src="Pictures/Emma%20Rodriguez.jpg" alt="Artist Elena Rodriguez" class="card-img-top">
                         <div class="card-body">
                             <span class="artist-category">Digital Artist</span>
                             <h3 class="card-title">Elena Rodriguez</h3>
@@ -154,7 +154,7 @@
                 <!-- Artist 2 -->
                 <div class="col-lg-4 col-md-6">
                     <div class="artist-card card">
-                        <img src="Pictures/Marcus Chen.jpg" alt="Artist Marcus Chen" class="card-img-top">
+                        <img src="Pictures/Marcus%20Chen.jpg" alt="Artist Marcus Chen" class="card-img-top">
                         <div class="card-body">
                             <span class="artist-category">Painter</span>
                             <h3 class="card-title">Marcus Chen</h3>
@@ -171,7 +171,7 @@
                 <!-- Artist 3 -->
                 <div class="col-lg-4 col-md-6">
                     <div class="artist-card card">
-                        <img src="Pictures/Sarah Johnson.jpg" alt="Artist Amara Okafor" class="card-img-top">
+                        <img src="Pictures/Sarah%20Johnson.jpg" alt="Artist Amara Okafor" class="card-img-top">
                         <div class="card-body">
                             <span class="artist-category">Sculptor</span>
                             <h3 class="card-title">Amara Okafor</h3>
@@ -225,7 +225,7 @@
                     data-sort-popularity="8.7" data-sort-trending="9.2" data-sort-comments="42">
                     <div class="artwork-card card">
                         <div class="artwork-img">
-                            <img src="Artworks/DREAMSCAPE ODYSSEY.png" alt="Dreamscape Odyssey by Elena Rodriguez">
+                            <img src="Artworks/DREAMSCAPE%20ODYSSEY.png" alt="Dreamscape Odyssey by Elena Rodriguez">
                             <div class="artwork-overlay"></div>
                             <div class="artwork-actions">
                                 <button class="artwork-action-btn" aria-label="Like artwork">
@@ -237,98 +237,99 @@
                                 <button class="artwork-action-btn" aria-label="Save artwork">
                                     <i class="fas fa-bookmark"></i>
                                 </button>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3 class="card-title">Dreamscape Odyssey</h3>
-                            <div class="artwork-artist">
-                                <div class="artist-avatar">
-                                    <img src="Pictures/Elena Rodriguez.jpg" alt="Elena Rodriguez">
-                                </div>
-                                <div class="artist-name">by Elena Rodriguez</div>
-                            </div>
-                            <div class="artwork-tags">
-                                <span class="artwork-tag">Digital Art</span>
-                                <span class="artwork-tag">Fantasy</span>
-                                <span class="artwork-tag">Landscape</span>
                             </div>
                         </div>
                     </div>
-                </div>
-                <!-- Artwork 2 -->
-                <div class="col-lg-4 col-md-6" data-category="painting" data-sort-date="2025-04-15"
-                    data-sort-popularity="7.9" data-sort-trending="8.1" data-sort-comments="28">
-                    <div class="artwork-card card">
-                        <div class="artwork-img">
-                            <img src="Artworks/Urban Fragments.png" alt="Urban Fragments by Marcus Chen">
-                            <div class="artwork-overlay"></div>
-                            <div class="artwork-actions">
-                                <button class="artwork-action-btn" aria-label="Like artwork">
-                                    <i class="fas fa-heart"></i>
-                                </button>
-                                <button class="artwork-action-btn" aria-label="Comment on artwork">
-                                    <i class="fas fa-comment"></i>
-                                </button>
-                                <button class="artwork-action-btn" aria-label="Save artwork">
-                                    <i class="fas fa-bookmark"></i>
-                                </button>
+                    <div class="card-body">
+                        <h3 class="card-title">Dreamscape Odyssey</h3>
+                        <div class="artwork-artist">
+                            <div class="artist-avatar">
+                                <img src="Pictures/Elena%20Rodriguez.jpg" alt="Elena Rodriguez">
                             </div>
+                            <div class="artist-name">by Elena Rodriguez</div>
                         </div>
-                        <div class="card-body">
-                            <h3 class="card-title">Urban Fragments</h3>
-                            <div class="artwork-artist">
-                                <div class="artist-avatar">
-                                    <img src="Pictures/Marcus Chen.jpg" alt="Marcus Chen">
-                                </div>
-                                <div class="artist-name">by Marcus Chen</div>
-                            </div>
-                            <div class="artwork-tags">
-                                <span class="artwork-tag">Abstract</span>
-                                <span class="artwork-tag">Oil Painting</span>
-                                <span class="artwork-tag">Urban</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Artwork 3 -->
-                <div class="col-lg-4 col-md-6" data-category="sculpture" data-sort-date="2025-04-25"
-                    data-sort-popularity="8.2" data-sort-trending="9.0" data-sort-comments="35">
-                    <div class="artwork-card card">
-                        <div class="artwork-img">
-                            <img src="Artworks/ANCESTRAL ECHOES.png" alt="Ancestral Echoes by Amara Okafor">
-                            <div class="artwork-overlay"></div>
-                            <div class="artwork-actions">
-                                <button class="artwork-action-btn" aria-label="Like artwork">
-                                    <i class="fas fa-heart"></i>
-                                </button>
-                                <button class="artwork-action-btn" aria-label="Comment on artwork">
-                                    <i class="fas fa-comment"></i>
-                                </button>
-                                <button class="artwork-action-btn" aria-label="Save artwork">
-                                    <i class="fas fa-bookmark"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3 class="card-title">Ancestral Echoes</h3>
-                            <div class="artwork-artist">
-                                <div class="artist-avatar">
-                                    <img src="Pictures/Amara Okafor.jpg" alt="Amara Okafor">
-                                </div>
-                                <div class="artist-name">by Amara Okafor</div>
-                            </div>
-                            <div class="artwork-tags">
-                                <span class="artwork-tag">Sculpture</span>
-                                <span class="artwork-tag">Heritage</span>
-                                <span class="artwork-tag">Contemporary</span>
-                            </div>
+                        <div class="artwork-tags">
+                            <span class="artwork-tag">Digital Art</span>
+                            <span class="artwork-tag">Fantasy</span>
+                            <span class="artwork-tag">Landscape</span>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="text-center mt-4">
-                <a href="gallery.html" class="btn btn-view-profile">View All Artworks</a>
+            <!-- Artwork 2 -->
+            <div class="col-lg-4 col-md-6" data-category="painting" data-sort-date="2025-04-15"
+                data-sort-popularity="7.9" data-sort-trending="8.1" data-sort-comments="28">
+                <div class="artwork-card card">
+                    <div class="artwork-img">
+                        <img src="Artworks/Urban%20Fragments.png" alt="Urban Fragments by Marcus Chen">
+                        <div class="artwork-overlay"></div>
+                        <div class="artwork-actions">
+                            <button class="artwork-action-btn" aria-label="Like artwork">
+                                <i class="fas fa-heart"></i>
+                            </button>
+                            <button class="artwork-action-btn" aria-label="Comment on artwork">
+                                <i class="fas fa-comment"></i>
+                            </button>
+                            <button class="artwork-action-btn" aria-label="Save artwork">
+                                <i class="fas fa-bookmark"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">Urban Fragments</h3>
+                        <div class="artwork-artist">
+                            <div class="artist-avatar">
+                                <img src="Pictures/Marcus%20Chen.jpg" alt="Marcus Chen">
+                            </div>
+                            <div class="artist-name">by Marcus Chen</div>
+                        </div>
+                        <div class="artwork-tags">
+                            <span class="artwork-tag">Abstract</span>
+                            <span class="artwork-tag">Oil Painting</span>
+                            <span class="artwork-tag">Urban</span>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <!-- Artwork 3 -->
+            <div class="col-lg-4 col-md-6" data-category="sculpture" data-sort-date="2025-04-25"
+                data-sort-popularity="8.2" data-sort-trending="9.0" data-sort-comments="35">
+                <div class="artwork-card card">
+                    <div class="artwork-img">
+                        <img src="Artworks/ANCESTRAL%20ECHOES.png" alt="Ancestral Echoes by Amara Okafor">
+                        <div class="artwork-overlay"></div>
+                        <div class="artwork-actions">
+                            <button class="artwork-action-btn" aria-label="Like artwork">
+                                <i class="fas fa-heart"></i>
+                            </button>
+                            <button class="artwork-action-btn" aria-label="Comment on artwork">
+                                <i class="fas fa-comment"></i>
+                            </button>
+                            <button class="artwork-action-btn" aria-label="Save artwork">
+                                <i class="fas fa-bookmark"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">Ancestral Echoes</h3>
+                        <div class="artwork-artist">
+                            <div class="artist-avatar">
+                                <img src="Pictures/Amara%20Okafor.jpg" alt="Amara Okafor">
+                            </div>
+                            <div class="artist-name">by Amara Okafor</div>
+                        </div>
+                        <div class="artwork-tags">
+                            <span class="artwork-tag">Sculpture</span>
+                            <span class="artwork-tag">Heritage</span>
+                            <span class="artwork-tag">Contemporary</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="text-center mt-4">
+            <a href="gallery.html" class="btn btn-view-profile">View All Artworks</a>
+        </div>
         </div>
     </section>
 
@@ -422,6 +423,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="script.js"></script>
+
+    <script>
+        document.querySelectorAll('.sort-option').forEach(button => {
+            button.addEventListener('click', () => {
+                document.querySelectorAll('.sort-option').forEach(btn => btn.classList.remove('active'));
+                button.classList.add('active');
+
+                const sortType = button.dataset.sort;
+                const artworks = Array.from(document.querySelectorAll('#artwork-container .col-md-6'));
+
+                artworks.sort((a, b) => {
+                    const aVal = parseFloat(a.dataset[`sort${sortType.charAt(0).toUpperCase() + sortType.slice(1)}`]);
+                    const bVal = parseFloat(b.dataset[`sort${sortType.charAt(0).toUpperCase() + sortType.slice(1)}`]);
+                    return bVal - aVal;
+                });
+
+                const container = document.getElementById('artwork-container');
+                artworks.forEach(el => container.appendChild(el));
+            });
+        });
+    </script>
 </body>
 
 </html>
