--- a/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/signup.html
+++ b/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/signup.html
@@ -608,6 +608,7 @@
 
                 alert('Account created successfully!');
                 setTimeout(() => {
+                    window.location.href = 'dashboard.html';
                     window.location.href = 'dashboard.html'; 
                 }, 1000);
             });
