Had to fix issues, remove space, and placing corrected end tags

--- a/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/about.html
+++ b/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/about.html
@@ -241,7 +241,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card">
                         <div class="team-photo">
-                            <img src="Pictures/Sarah Johnson.jpg" alt="Sarah Johnson - CEO & Co-founder">
+                            <img src="Pictures/Sarah%20Johnson.jpg" alt="Sarah Johnson - CEO & Co-founder">
                         </div>
                         <h4 class="team-name">Sarah Johnson</h4>
                         <div class="team-title">CEO & Co-founder</div>
@@ -252,7 +252,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card">
                         <div class="team-photo">
-                            <img src="Pictures/Micheal Chen.jpg" alt="Michael Chen - CTO & Co-founder">
+                            <img src="Pictures/Micheal%20Chen.jpg" alt="Michael Chen - CTO & Co-founder">
                         </div>
                         <h4 class="team-name">Michael Chen</h4>
                         <div class="team-title">CTO & Co-founder</div>
@@ -263,7 +263,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card">
                         <div class="team-photo">
-                            <img src="Pictures/Emma Rodriguez.jpg" alt="Emma Rodriguez - Head of Community">
+                            <img src="Pictures/Emma%20Rodriguez.jpg" alt="Emma Rodriguez - Head of Community">
                         </div>
                         <h4 class="team-name">Emma Rodriguez</h4>
                         <div class="team-title">Head of Community</div>
@@ -274,7 +274,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card">
                         <div class="team-photo">
-                            <img src="Pictures/David Thompson.jpg" alt="David Thompson - Head of Design">
+                            <img src="Pictures/David%20Thompson.jpg" alt="David Thompson - Head of Design">
                         </div>
                         <h4 class="team-name">David Thompson</h4>
                         <div class="team-title">Head of Design</div>
