--- a/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/gallery.html
+++ b/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/gallery.html
@@ -134,7 +134,7 @@
                 <!-- Artwork 1 -->
                 <div class="col-lg-4 col-md-6 gallery-item" data-category="digital-art">
                     <div class="gallery-img">
-                        <img src="Artworks/DREAMSCAPE ODYSSEY.png" alt="Cosmic Dreams by Elena Rodriguez">
+                        <img src="Artworks/DREAMSCAPE%20ODYSSEY.png" alt="Cosmic Dreams by Elena Rodriguez">
                         <div class="gallery-overlay"></div>
                         <div class="gallery-actions">
                             <button class="gallery-action-btn" aria-label="Like artwork">
@@ -152,7 +152,7 @@
                         <h3 class="gallery-title">Cosmic Dreams</h3>
                         <div class="gallery-artist">
                             <div class="artist-avatar">
-                                <img src="Pictures/Elena Rodriguez.jpg" alt="Elena Rodriguez">
+                                <img src="Pictures/Elena%20Rodriguez.jpg" alt="Elena Rodriguez">
                             </div>
                             <div class="artist-name">by Elena Rodriguez</div>
                         </div>
@@ -167,7 +167,7 @@
                 <!-- Artwork 2 -->
                 <div class="col-lg-4 col-md-6 gallery-item" data-category="painting">
                     <div class="gallery-img">
-                        <img src="Artworks/Urban Fragments.png" alt="City Lights by Marcus Chen">
+                        <img src="Artworks/Urban%20Fragments.png" alt="City Lights by Marcus Chen">
                         <div class="gallery-overlay"></div>
                         <div class="gallery-actions">
                             <button class="gallery-action-btn" aria-label="Like artwork">
@@ -185,7 +185,7 @@
                         <h3 class="gallery-title">City Lights</h3>
                         <div class="gallery-artist">
                             <div class="artist-avatar">
-                                <img src="Pictures/Marcus Chen.jpg" alt="Marcus Chen">
+                                <img src="Pictures/Marcus%20Chen.jpg" alt="Marcus Chen">
                             </div>
                             <div class="artist-name">by Marcus Chen</div>
                         </div>
@@ -200,7 +200,7 @@
                 <!-- Artwork 3 -->
                 <div class="col-lg-4 col-md-6 gallery-item" data-category="sculpture">
                     <div class="gallery-img">
-                        <img src="Artworks/ANCESTRAL ECHOES.png" alt="Heritage Memories by Amara Okafor">
+                        <img src="Artworks/ANCESTRAL%20ECHOES.png" alt="Heritage Memories by Amara Okafor">
                         <div class="gallery-overlay"></div>
                         <div class="gallery-actions">
                             <button class="gallery-action-btn" aria-label="Like artwork">
@@ -218,7 +218,7 @@
                         <h3 class="gallery-title">Heritage Memories</h3>
                         <div class="gallery-artist">
                             <div class="artist-avatar">
-                                <img src="Pictures/Amara Okafor.jpg" alt="Amara Okafor">
+                                <img src="Pictures/Amara%20Okafor.jpg" alt="Amara Okafor">
                             </div>
                             <div class="artist-name">by Amara Okafor</div>
                         </div>
@@ -329,157 +329,156 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
 
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-            <footer>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-6 footer-about">
-                            <div class="footer-logo">Art<span>Spire</span></div>
-                            <p>A creative hub designed for artists and art enthusiasts to share, showcase, and discover
-                                artwork
-                                from around the world.</p>
-                            <div class="social-links">
-                                <a href="#" class="social-link" aria-label="Facebook"><i
-                                        class="fab fa-facebook-f"></i></a>
-                                <a href="#" class="social-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                                <a href="#" class="social-link" aria-label="Instagram"><i
-                                        class="fab fa-instagram"></i></a>
-                                <a href="#" class="social-link" aria-label="Pinterest"><i
-                                        class="fab fa-pinterest-p"></i></a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-2 col-md-6">
-                            <h4 class="footer-heading">Quick Links</h4>
-                            <ul class="footer-links">
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
-                                <li><a href="artists.html">Artists</a></li>
-                                <li><a href="community.html">Community</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <h4 class="footer-heading">Support</h4>
-                            <ul class="footer-links">
-                                <li><a href="#">Help Center</a></li>
-                                <li><a href="#">Terms of Service</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Cookie Policy</a></li>
-                                <li><a href="#">FAQs</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <h4 class="footer-heading">Contact Us</h4>
-                            <div class="footer-contact-item">
-                                <i class="fas fa-map-marker-alt"></i>
-                                <span>123 Art Street, Creative City, AC 12345</span>
-                            </div>
-                            <div class="footer-contact-item">
-                                <i class="fas fa-phone-alt"></i>
-                                <span>(123) 456-7890</span>
-                            </div>
-                            <div class="footer-contact-item">
-                                <i class="fas fa-envelope"></i>
-                                <span>hello@artspire.com</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="copyright">
-                        <p>© 2025 ArtSpire. All Rights Reserved. Designed with <i class="fas fa-heart"
-                                style="color: var(--watermelon-red);"></i> for artists.</p>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 footer-about">
+                    <div class="footer-logo">Art<span>Spire</span></div>
+                    <p>A creative hub designed for artists and art enthusiasts to share, showcase, and discover
+                        artwork
+                        from around the world.</p>
+                    <div class="social-links">
+                        <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="social-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-link" aria-label="Pinterest"><i class="fab fa-pinterest-p"></i></a>
                     </div>
                 </div>
-            </footer>
 
-            <button id="back-to-top" class="back-to-top-btn" aria-label="Back to top">
-                <i class="fas fa-chevron-up"></i>
-            </button>
+                <div class="col-lg-2 col-md-6">
+                    <h4 class="footer-heading">Quick Links</h4>
+                    <ul class="footer-links">
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="artists.html">Artists</a></li>
+                        <li><a href="community.html">Community</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
 
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-            <script src="script.js"></script>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="footer-heading">Support</h4>
+                    <ul class="footer-links">
+                        <li><a href="#">Help Center</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Cookie Policy</a></li>
+                        <li><a href="#">FAQs</a></li>
+                    </ul>
+                </div>
 
-            <script>
-                document.addEventListener('DOMContentLoaded', function () {
-                    const filterButtons = document.querySelectorAll('.filter-btn');
-                    const galleryItems = document.querySelectorAll('.gallery-item');
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="footer-heading">Contact Us</h4>
+                    <div class="footer-contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span>123 Art Street, Creative City, AC 12345</span>
+                    </div>
+                    <div class="footer-contact-item">
+                        <i class="fas fa-phone-alt"></i>
+                        <span>(123) 456-7890</span>
+                    </div>
+                    <div class="footer-contact-item">
+                        <i class="fas fa-envelope"></i>
+                        <span>hello@artspire.com</span>
+                    </div>
+                </div>
+            </div>
 
-                    filterButtons.forEach(button => {
-                        button.addEventListener('click', function () {
-                            filterButtons.forEach(btn => btn.classList.remove('active'));
-                            this.classList.add('active');
+            <div class="copyright">
+                <p>© 2025 ArtSpire. All Rights Reserved. Designed with <i class="fas fa-heart"
+                        style="color: var(--watermelon-red);"></i> for artists.</p>
+            </div>
+        </div>
+    </footer>
 
-                            const filterValue = this.getAttribute('data-filter');
+    <button id="back-to-top" class="back-to-top-btn" aria-label="Back to top">
+        <i class="fas fa-chevron-up"></i>
+    </button>
 
-                            galleryItems.forEach(item => {
-                                if (filterValue === 'all' || item.getAttribute('data-category') === filterValue) {
-                                    item.style.display = 'block';
-                                } else {
-                                    item.style.display = 'none';
-                                }
-                            });
-                        });
-                    });
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 
-                    const likeButtons = document.querySelectorAll('.gallery-action-btn:nth-child(1)');
-                    likeButtons.forEach(button => {
-                        button.addEventListener('click', function () {
-                            this.classList.toggle('liked');
-                            if (this.classList.contains('liked')) {
-                                this.querySelector('i').style.color = '#ff6b6b';
-                            } else {
-                                this.querySelector('i').style.color = '';
-                            }
-                        });
-                    });
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const filterButtons = document.querySelectorAll('.filter-btn');
+            const galleryItems = document.querySelectorAll('.gallery-item');
 
-                    const searchForm = document.getElementById('gallery-search-form');
-                    const searchInput = document.getElementById('gallery-search');
+            filterButtons.forEach(button => {
+                button.addEventListener('click', function () {
+                    filterButtons.forEach(btn => btn.classList.remove('active'));
+                    this.classList.add('active');
 
-                    searchForm.addEventListener('submit', function (e) {
-                        e.preventDefault();
-                        const searchTerm = searchInput.value.toLowerCase().trim();
+                    const filterValue = this.getAttribute('data-filter');
 
-                        if (searchTerm === '') {
-                            // If search is empty, show all items
-                            galleryItems.forEach(item => item.style.display = 'block');
-                            return;
+                    galleryItems.forEach(item => {
+                        if (filterValue === 'all' || item.getAttribute('data-category') === filterValue) {
+                            item.style.display = 'block';
+                        } else {
+                            item.style.display = 'none';
                         }
-
-                        galleryItems.forEach(item => {
-                            const title = item.querySelector('.gallery-title').textContent.toLowerCase();
-                            const artist = item.querySelector('.artist-name').textContent.toLowerCase();
-                            const tags = Array.from(item.querySelectorAll('.gallery-tag')).map(tag => tag.textContent.toLowerCase());
-
-                            // Check if search term matches title, artist name, or any tag
-                            if (title.includes(searchTerm) ||
-                                artist.includes(searchTerm) ||
-                                tags.some(tag => tag.includes(searchTerm))) {
-                                item.style.display = 'block';
-                            } else {
-                                item.style.display = 'none';
-                            }
-                        });
-
-                        // Reset filter buttons to show 'All' as active
-                        filterButtons.forEach(btn => btn.classList.remove('active'));
-                        document.querySelector('.filter-btn[data-filter="all"]').classList.add('active');
                     });
                 });
-            </script>
+            });
+
+            const likeButtons = document.querySelectorAll('.gallery-action-btn:nth-child(1)');
+            likeButtons.forEach(button => {
+                button.addEventListener('click', function () {
+                    this.classList.toggle('liked');
+                    if (this.classList.contains('liked')) {
+                        this.querySelector('i').style.color = '#ff6b6b';
+                    } else {
+                        this.querySelector('i').style.color = '';
+                    }
+                });
+            });
+
+            const searchForm = document.getElementById('gallery-search-form');
+            const searchInput = document.getElementById('gallery-search');
+
+            searchForm.addEventListener('submit', function (e) {
+                e.preventDefault();
+                const searchTerm = searchInput.value.toLowerCase().trim();
+
+                if (searchTerm === '') {
+                    // If search is empty, show all items
+                    galleryItems.forEach(item => item.style.display = 'block');
+                    return;
+                }
+
+                galleryItems.forEach(item => {
+                    const title = item.querySelector('.gallery-title').textContent.toLowerCase();
+                    const artist = item.querySelector('.artist-name').textContent.toLowerCase();
+                    const tags = Array.from(item.querySelectorAll('.gallery-tag')).map(tag => tag.textContent.toLowerCase());
+
+                    // Check if search term matches title, artist name, or any tag
+                    if (title.includes(searchTerm) ||
+                        artist.includes(searchTerm) ||
+                        tags.some(tag => tag.includes(searchTerm))) {
+                        item.style.display = 'block';
+                    } else {
+                        item.style.display = 'none';
+                    }
+                });
+
+                // Reset filter buttons to show 'All' as active
+                filterButtons.forEach(btn => btn.classList.remove('active'));
+                document.querySelector('.filter-btn[data-filter="all"]').classList.add('active');
+            });
+        });
+    </script>
 </body>
 
 </html>
