--- a/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/index.html
+++ b/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/index.html
@@ -333,7 +333,6 @@
         </div>
     </section>
 
-    <!-- Call To Action -->
     <section class="cta">
         <div class="cta-shape cta-shape-1"></div>
         <div class="cta-shape cta-shape-2"></div>
@@ -351,7 +350,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <!-- About -->
+
                 <div class="col-lg-4 col-md-6 footer-about">
                     <div class="footer-logo">Art<span>Spire</span></div>
                     <p>A creative hub designed for artists and art enthusiasts to share, showcase, and discover artwork
@@ -364,7 +363,6 @@
                     </div>
                 </div>
 
-                <!-- Quick Links -->
                 <div class="col-lg-2 col-md-6">
                     <h4 class="footer-heading">Quick Links</h4>
                     <ul class="footer-links">
@@ -376,7 +374,6 @@
                     </ul>
                 </div>
 
-                <!-- Support -->
                 <div class="col-lg-3 col-md-6">
                     <h4 class="footer-heading">Support</h4>
                     <ul class="footer-links">
@@ -388,7 +385,7 @@
                     </ul>
                 </div>
 
-                <!-- Contact Info -->
+                <!-- Contact info -->
                 <div class="col-lg-3 col-md-6">
                     <h4 class="footer-heading">Contact Us</h4>
                     <div class="footer-contact-item">
@@ -406,7 +403,6 @@
                 </div>
             </div>
 
-            <!-- Copyright -->
             <div class="copyright">
                 <p>© 2025 ArtSpire. All Rights Reserved. Designed with <i class="fas fa-heart"
                         style="color: var(--watermelon-red);"></i> for artists.</p>
@@ -414,14 +410,11 @@
         </div>
     </footer>
 
-    <!-- Back to top button -->
     <button id="back-to-top" class="back-to-top-btn" aria-label="Back to top">
         <i class="fas fa-chevron-up"></i>
     </button>
 
-    <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
     <script src="script.js"></script>
 
     <script>
