Removed spaces and Amara Okafor"

--- a/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/artists.html
+++ b/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/artists.html
@@ -139,7 +139,7 @@
                         <div class="col-lg-4 col-md-6 mb-4" data-category="digital-art">
                             <div class="artist-profile-card card">
                                 <div class="artist-header">
-                                    <img src="Pictures/Emma Rodriguez.jpg" alt="Elena Rodriguez" class="artist-img">
+                                    <img src="Pictures/Emma%20Rodriguez.jpg" alt="Elena Rodriguez" class="artist-img">
                                     <div class="artist-info">
                                         <h2 class="artist-name">Elena Rodriguez</h2>
                                         <p class="artist-title">Digital Artist</p>
@@ -173,7 +173,7 @@
                                     <span class="artist-tag">Character Design</span>
                                 </div>
                                 <div class="artist-actions">
-                                    <a href="Elena Rodriguez Profile.html" class="btn btn-view-profile">View Profile</a>
+                                    <a href="Elena%20Rodriguez%20Profile.html" class="btn btn-view-profile">View Profile</a>
                                     <button class="btn btn-follow"><i class="fas fa-user-plus"></i> Follow</button>
                                 </div>
                             </div>
@@ -183,7 +183,7 @@
                         <div class="col-lg-4 col-md-6 mb-4" data-category="painting">
                             <div class="artist-profile-card card">
                                 <div class="artist-header">
-                                    <img src="Pictures/Marcus Chen.jpg" alt="Marcus Chen" class="artist-img">
+                                    <img src="Pictures/Marcus%20Chen.jpg" alt="Marcus Chen" class="artist-img">
                                     <div class="artist-info">
                                         <h2 class="artist-name">Marcus Chen</h2>
                                         <p class="artist-title">Oil Painter</p>
@@ -226,7 +226,7 @@
                         <div class="col-lg-4 col-md-6 mb-4" data-category="sculpture">
                             <div class="artist-profile-card card">
                                 <div class="artist-header">
-                                    <img src="Pictures/Sarah Johnson.jpg" Amara Okafor" class="artist-img">
+                                    <img src="Pictures/Sarah%20Johnson.jpg" class="artist-img">
                                     <div class="artist-info">
                                         <h2 class="artist-name">Amara Okafor</h2>
                                         <p class="artist-title">Sculptor</p>
@@ -268,7 +268,7 @@
                         <div class="col-lg-4 col-md-6 mb-4" data-category="photography">
                             <div class="artist-profile-card card">
                                 <div class="artist-header">
-                                    <img src="Pictures/David Thompson.jpg" alt="Carlos Méndez" class="artist-img">
+                                    <img src="Pictures/David%20Thompson.jpg" alt="Carlos Méndez" class="artist-img">
                                     <div class="artist-info">
                                         <h2 class="artist-name">Carlos Méndez</h2>
                                         <p class="artist-title">Photographer</p>
