--- a/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/signup.html
+++ b/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/signup.html
@@ -472,19 +472,19 @@
                                                 <div class="account-type-option">
                                                     <input type="radio" name="accountType" id="artist" value="artist"
                                                         checked>
-                                                    <label for="artist">
-                                                        <i class="fas fa-palette"></i>
-                                                        <div class="type-name">Artist</div>
-                                                        <div class="type-desc">I create and share artwork</div>
-                                                    </label>
+                                                    <label for="artist">Artist</label>
+                                                    <i class="fas fa-palette"></i>
+                                                    <div class="type-name">Artist</div>
+                                                    <div class="type-desc">I create and share artwork</div>
+
                                                 </div>
                                                 <div class="account-type-option">
                                                     <input type="radio" name="accountType" id="collector"
                                                         value="collector">
                                                     <label for="collector">
                                                         <i class="fas fa-images"></i>
-                                                        <div class="type-name">Art Lover</div>
-                                                        <div class="type-desc">I appreciate and collect art</div>
+                                                        <span class="type-name">Art Lover</span>
+                                                        <span class="type-desc">I appreciate and collect art</span>
                                                     </label>
                                                 </div>
                                             </div>
@@ -581,7 +581,7 @@
     <script src="script.js"></script>
 
 
-<!--Had a missing Form ID and needed to add js-->
+    <!--Had a missing Form ID and needed to add js-->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const form = document.querySelector('form');
@@ -601,7 +601,7 @@
                     createdAt: new Date().toISOString()
                 };
 
-                
+
                 let users = JSON.parse(localStorage.getItem('artspire_users') || '[]');
                 users.push(userData);
                 localStorage.setItem('artspire_users', JSON.stringify(users));
@@ -609,7 +609,7 @@
                 alert('Account created successfully!');
                 setTimeout(() => {
                     window.location.href = 'dashboard.html';
-                    window.location.href = 'dashboard.html'; 
+                    window.location.href = 'dashboard.html';
                 }, 1000);
             });
         });
