Removed and fixed

--- a/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/community.html
+++ b/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/community.html
@@ -479,7 +479,7 @@
             <div class="row">
                 <!-- Discussion 1 -->
                 <div class="col-lg-6 col-md-6">
-                    <a href="discussionthread1.html" class="discussion-link">
+                    <a href="#" class="discussion-link">
                         <div class="discussion-card">
                             <div class="discussion-header">
                                 <h3 class="discussion-title">Best digital art software for beginners in 2025?</h3>
